# LostARK_fishing_alarm

./: .gitignore  app.py  pyproject.toml  requirements.txt
qss/: main.qss
