[tool.poetry]
name = "LostARK_fishing_alarm"
version = "0.1.0"
description = ""
authors = ["SeoYoungDeok <0duck_seo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "=3.11.4"
opencv-python = "^4.7.0.72"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
pyyaml = "^6.0"
ipykernel = "^6.23.1"
python-dotenv = "^1.0.0"
onnx = "^1.15.0"
onnxruntime = "^1.16.1"
pyqt6 = "^6.6.0"
pywin32 = "^306"
albumentations = "^1.3.1"
pyinstaller = "^6.1.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
